fix: standardize button text and improve styles in video player and modal components - changed button text from 'PLAY' to 'Play' for consistency across the video player - updated styles in modal and video player components for better visual alignment and responsiveness - adjusted transition effects and layout properties for improved user experience

--- a/src/styles/scss/_about.scss
+++ b/src/styles/scss/_about.scss
@@ -90,7 +90,7 @@
     opacity: 0;
     z-index: 1;
     pointer-events: none;
-    transition: opacity 0.3s ease;
+    transition: all 0.3s ease;
   }
 
   &:hover {
@@ -100,6 +100,7 @@
 
     .team__bio {
       opacity: 1;
+      transform: translateY(0);
       visibility: visible;
     }
   }
@@ -151,13 +152,13 @@
   position: absolute;
   bottom: 1.5rem;
   left: 0;
-  // transform: translateX(-50%);
+  transform: translateY(10px);
   z-index: 15;
   padding: 1.5rem 2rem;
   max-width: min(80vw, 500px);
   opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
+  visibility: hidden; 
+  transition: all 0.3s ease;
   color: var(--color-white);
   line-height: 1.5;
   pointer-events: none;
