--- a/src/styles/scss/_modal.scss
+++ b/src/styles/scss/_modal.scss
@@ -27,7 +27,7 @@
 .modal__close {
   position: fixed;
   z-index: 9992;
-  top: 16px;
+  top: 1.5rem;
   right: 16px;
   cursor: pointer;
   width: 60px;
@@ -37,8 +37,13 @@
     .ui-close {
       // opacity: .5;
       transform: rotate(180deg);
-      transform-origin: center;
-      border: 2px solid #ffffff22;
+      transform-origin: center; 
+      // border: 2px solid #ffffff22;
+
+      &::before,
+      &::after { 
+        background-color: $color-orange; 
+      }
     }
   }
 
@@ -58,7 +63,7 @@
   width: 60px;
   height: 60px;
   border-radius: 999px;
-  border: 1px solid #ffffff55;
+  // border: 1px solid #ffffff55;
   transition: .35s;
 
   &::before,
@@ -66,7 +71,7 @@
     display: block;
     content: '';
     position: absolute;
-    height: 21px;
+    height: 32px;
     width: 2px;
     background-color: #fff;
     transform: rotate(45deg);
@@ -124,12 +129,14 @@
 
 .vimeo-player__title {
   font-family: $main-font-title;
-  font-size: clamp(24px, 3vw, 36px);
+  font-size: clamp(32px, 5vw, 48px);
   font-weight: 900;
+  line-height: 1;
   color: #fff;
   opacity: 1;
-  transition: opacity 0.3s ease;
-  pointer-events: none;
+  transition: opacity 0.3s ease; 
+  pointer-events: none; 
+  letter-spacing: -.02em;
 }
 
 .modal.vimeo-player--playing .vimeo-player__title {
@@ -146,19 +153,26 @@
 .vimeo-player__play-pause {
   font-family: $main-font;
   background: transparent;
-  border: 2px solid #fff;
-  color: #fff;
-  font-size: 14px;
-  font-weight: 600;
-  padding: 0.75rem 1.5rem;
+  padding: .75rem 0 .75rem 0rem;
   cursor: pointer;
   transition: all 0.3s ease;
+
+  width: 64px;
+
+  // border: 2px solid #fff;
+  // letter-spacing: 1px;
+   
+  font-size: clamp(14px, 2vw, 16px);
+  font-weight: 800;
+  letter-spacing: 0.025rem;
+  color: #fff;  
+  text-align: left;
   text-transform: uppercase;
-  letter-spacing: 1px;
-  
+
   &:hover {
-    background: #fff;
+    // background: #fff;
     color: $color-darkBlue;
+    color: $color-orange;
   }
 }
 
@@ -178,7 +192,7 @@
 
 .vimeo-player__progress-bar {
   height: 100%;
-  background: #fff;
+  background: $color-orange;
   width: 0%;
   transition: width 0.1s linear;
 }
